# to-korean-ai

./: Cargo.toml  README.md
.cargo/: config.toml
docs/: design.md
examples/: cli.rs
lib/: Cargo.toml
lib/src/: book.rs  lang.rs  lib.rs  translate.rs
