[package]
name = "to-korean-ai"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
# --------------------------------------------- Core --------------------------------------------- #
eframe = "0.21"
lib = { package = "to-korean-ai-lib", path = "./lib" }

log = "0.4"
env_logger = "0.10"

tokio = "1.0"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
