[package]
name = "to-korean-ai"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lib"]

[dependencies]
# --------------------------------------------- Core --------------------------------------------- #
lib = { package = "to-korean-ai-lib", path = "./lib" }

# ---------------------------------------------- IO ---------------------------------------------- #
tokio = { version = "1.0", features = ["full"] }

# ---------------------------------------------- GUI --------------------------------------------- #
eframe = "0.21"

# -------------------------------------------- Utility ------------------------------------------- #
capture-it = "0.4"
derive_more = "0.99"

# -------------------------------------------- Logging ------------------------------------------- #
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
parking_lot = "0.12"
