[package]
name = "to-korean-ai-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# --------------------------------------------- Core --------------------------------------------- #
async-openai = "0.10"

# ---------------------------------------------- IO ---------------------------------------------- #
tokio = "1.12"

config-it = "0.6"
rusqlite = "0.29"

dirs = "5.0"

# ------------------------------------------ Misc Utils ------------------------------------------ #
capture-it = "0.4"
derive_more = "0.99"
typed-builder = "0.14"
getset = "0.1"
thiserror = "1.0"
base64 = "0.21.0"
