[package]
name = "to-korean-ai-lib"
version = "0.1.0"
edition = "2021"

# ------------------------------------------------------------------------------------------------ #
#                                               DEPS                                               #
# ------------------------------------------------------------------------------------------------ #
[dependencies]
# --------------------------------------------- Core --------------------------------------------- #
async-openai = "0.10"

# ---------------------------------------------- IO ---------------------------------------------- #
tokio = "1.12"

config-it = "0.6"
rusqlite = { version = "0.29.0", features = ["bundled"] }

dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# -------------------------------------------- Logging ------------------------------------------- #
log = "0.4"
tracing = "0.1"

# ------------------------------------------ Misc Utils ------------------------------------------ #
capture-it = "0.4"
derive_more = "0.99"
typed-builder = "0.14"
getset = "0.1"
thiserror = "1.0"
base64 = "0.21.0"
static_assertions = "1.1.0"
custom_debug_derive = "0.5.1"
string-interner = "0.14.0"
compact_str = "0.7.0"
default = "0.1"
indoc = "2.0"
lazy_static = "1.0"

# ------------------------------------------------------------------------------------------------ #
#                                             DEV DEPS                                             #
# ------------------------------------------------------------------------------------------------ #
[dev-dependencies]
anyhow = "1.0"
env_logger = "0.10"

[dev-dependencies.test-log]
version = "0.2"
features = ["trace", "log"]

[dev-dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["env-filter", "fmt"]
